platform/k8s/base/mesh/telemetry.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: work-pool-peer-auth
spec:
  mtls:
    mode: PERMISSIVE
