platform/k8s/base/mesh/gateway-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: work-pool-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - api.work-pool.org
        - ui.work-pool.org
        - user-service.work-pool.org
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: work-pool-api-vs
spec:
  hosts:
    - api.work-pool.org
  gateways:
    - work-pool-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: work-pool-api-gateway
            port:
              number: 8080
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: work-pool-ui-vs
spec:
  hosts:
    - ui.work-pool.org
  gateways:
    - work-pool-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: work-pool-ui
            port:
              number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: work-pool-user-service-vs
spec:
  hosts:
    - user-service.work-pool.org
  gateways:
    - work-pool-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: work-pool-user-service
            port:
              number: 8081
